<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_gradient_background"
    tools:context=".SplashActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="2dp"
        android:background="@drawable/green_blue_gradient_background"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/smarta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/Unicauca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_description"
            android:src="@drawable/escudo" />

        <TextView
            android:id="@+id/unicauca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Unicauca"
            android:layout_centerHorizontal="true"
            android:paddingTop="50dp"
            android:text="@string/unicauca"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff"
            android:textSize="@dimen/activity_horizontal_margin" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/unicauca"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/year"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_horizontal_margin" />
    </RelativeLayout>

</RelativeLayout>